# webassembly-examples

./: .gitignore  README.md  wasm-utils.js
.github/: CODEOWNERS  dependabot.yml
c-example/: a.out  hello.asm.js  hello.js  hello.wast
js-api-examples/: compile-streaming.html  fail.html  fail.wasm  fail.wat  global.html  global.wasm  global.wat  imports.html  index-compile.html  index.html  index_concise.html  instantiate-streaming.html  memory.html  memory.was  memory.wasm  memory.wat  simple.wasm  simple.wat  table.html  table.was  table.wasm  table.wat  table2.html  table2.was  table2.wasm  table2.wat  validate.html  wasm_worker.js  xhr-wasm.html
js-builtin-examples/: README.md  log-concat.wat
other-examples/: custom-section.html  indexeddb-cache.html  indexeddb-cache.wasm  indexeddb-cache.wat  simple-name-section.was  simple-name-section.wasm  simple-name-section.wat  table-set.html  table.wasm
rust-js/: Cargo.toml  README.md  index.html
rust-js/site/: index.html  index.js  package-lock.json  package.json  webpack.config.js
rust-js/src/: lib.rs
rust-node/: README.md
template/: template.html
understanding-text-format/: add.html  add.wasm  add.wat  call.html  call.wasm  call.wat  logger.html  logger.wasm  logger.wat  logger2.html  logger2.was  logger2.wasm  logger2.wat  memory-export.html  memory-export.wasm  memory-export.wat  multi-memory.html  multi-memory.wasm  multi-memory.wat  shared-address-space.html  shared0.was  shared0.wasm  shared0.wat  shared1.wasm  shared1.wat  wasm-table.html  wasm-table.was  wasm-table.wasm  wasm-table.wat
(+31 files in other folders)
